Update the whole logic

--- a/src/index.css
+++ b/src/index.css
@@ -117,19 +117,64 @@ div::-webkit-scrollbar-thumb {
   margin: 5px 2px;
   text-align: left;
   border-radius: 5px;
+  position: relative;
   background-color: white;
   overflow-wrap: break-word;
 }
 
 .message-box.left {
   background-color: white;
-
   float: left;
 }
 
 .message-box.right {
   background-color: skyblue;
   float: right;
+}
+
+.message-box.left .indicator {
+  right: -20px;
+}
+
+.message-box.right .indicator {
+  left: -20px;
+}
+
+.indicator {
+  position: absolute;
+  bottom: 5px;
+}
+
+.message-box.left .error-indicator-wrapper {
+  right: -25px;
+}
+
+.message-box.right .error-indicator-wrapper {
+  left: -25px;
+}
+
+.sent-indicator {
+  width: 5px;
+  height: 12px;
+  cursor: pointer;
+  transform: rotate(45deg);
+  border-right: 3px solid green;
+  border-bottom: 3px solid green;
+}
+
+.error-indicator {
+  color: red;
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+  border: 1px solid;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.error-indicator:after {
+  content: '!';
+  background-color: #ddd;
 }
 
 .message-time {
@@ -149,6 +194,34 @@ div::-webkit-scrollbar-thumb {
   padding: 8px;
   vertical-align: middle;
   background-color: blue;
+}
+
+.spinner {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  border: 3px solid rgb(199, 223, 255);
+  border-top: 3px solid #3498db;
+  animation: spin 1s linear infinite;
+  -webkit-animation: spin 1s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .clearfix {
