--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,16 @@ body {
   background-color: #0000ff;
 }
 
+.cross-button {
+  font-size: 40px;
+  position: absolute;
+  top: 8px;
+  right: 15px;
+  color: white;
+  cursor: pointer;
+  font-weight: bolder;
+}
+
 div::-webkit-scrollbar {
   width: 10px;
 }
