--- a/src/index.css
+++ b/src/index.css
@@ -158,6 +158,10 @@ div::-webkit-scrollbar-thumb {
   overflow-wrap: break-word;
 }
 
+.message-box.mt {
+  margin-top: 30px;
+}
+
 .message-box.left {
   background-color: white;
   float: left;
@@ -176,9 +180,23 @@ div::-webkit-scrollbar-thumb {
   left: -20px;
 }
 
+.message-box.right .username-wrapper {
+  right: 10px;
+}
+
+.message-box.left .username-wrapper {
+  left: 10px;
+}
+
 .indicator {
   position: absolute;
   bottom: 5px;
+}
+
+.username-wrapper {
+  top: -25px;
+  position: absolute;
+  text-transform: capitalize;
 }
 
 .message-box.left .error-indicator-wrapper {
