--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ body {
   border: 1px solid grey;
 }
 
+.login-button,
 .login-form-wrapper input {
   display: block;
   height: 30px;
@@ -82,6 +83,10 @@ body {
   font-weight: bold;
   color: white;
   background-color: #0000ff;
+}
+
+.login-button .spinner {
+  margin: 0 auto;
 }
 
 .cross-button {
