--- a/src/index.css
+++ b/src/index.css
@@ -284,6 +284,27 @@ div::-webkit-scrollbar-thumb {
   -webkit-animation: spin 1s linear infinite;
 }
 
+.friend-list-container {
+  padding: 0 10px;
+  overflow: auto;
+  text-align: left;
+}
+
+.friend-list {
+  padding: 10px;
+}
+
+.friend-list-item {
+  margin: 10px 0;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #9af8f7;
+}
+
+.friend-list-item:nth-child(even) {
+  background-color: #fff;
+}
+
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
