--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,7 @@ div::-webkit-scrollbar-thumb {
 .chat-messages-container {
   font-size: 15px;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .chat-form {
@@ -177,7 +178,13 @@ div::-webkit-scrollbar-thumb {
   border: 1px solid white;
 }
 
+.message-list {
+  height: 100%;
+  position: relative;
+}
+
 .message-box {
+  opacity: 1;
   width: 75%;
   padding: 5px;
   margin: 5px 2px;
@@ -186,6 +193,16 @@ div::-webkit-scrollbar-thumb {
   position: relative;
   background-color: white;
   overflow-wrap: break-word;
+  transition: opacity 1s;
+}
+
+.message-box-animation.left {
+  opacity: 0.1 !important;
+  left: -100px !important;
+}
+
+.message-box-animation.right {
+  opacity: 0.1 !important;
 }
 
 .message-box.mt {
@@ -193,8 +210,10 @@ div::-webkit-scrollbar-thumb {
 }
 
 .message-box.left {
-  background-color: white;
+  left: 0;
   float: left;
+  transition: left 0.5s;
+  background-color: white;
 }
 
 .message-box.right {
@@ -302,6 +321,10 @@ div::-webkit-scrollbar-thumb {
   padding: 0 10px;
   overflow: auto;
   text-align: left;
+}
+
+.friends-title {
+  margin-top: 10px;
 }
 
 .friend-list {
